Ajout du header avec navigation

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Mon Site Web</title>
+	<title>Mon Site Web - Header Amélioré</title>
 </head>
 
 <body>
-	<h1>Bienvenue sur mon site</h1>
-	<p>Ceci est la version initiale</p>
+	<header>
+		<h1>Bienvenue sur mon site moderne</h1>
+		<nav>
+			<a href="#home">Accueil</a>
+			<a href="#about">À propos</a>
+		</nav>
+	</header>
+	<p>Ceci est la version avec header amélioré</p>
 </body>
 
 </html>
