ajoute du footer avec copyright

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Mon Site Web</title>
+	<title>Mon Site Web - Footer Complet</title>
 </head>
 
 <body>
 	<h1>Bienvenue sur mon site</h1>
-	<p>Ceci est la version initiale</p>
+	<p>Ceci est la version avec footer</p>
+	<footer>
+		<p>© 2025 Mon Site Web</p>
+		<p>Contact: contact@monsite.com</p>
+	</footer>
 </body>
 
 </html>
